Add more unit tests to demonstrate JSONPath